# tsubakuro

./: .gitattributes  .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
.github/: CODEOWNERS
.github/workflows/: build-tsubakuro-ubuntu.yml  ci-build.yml  ci-publish.yml  eisen-integration-test.yml  iceaxe-dbtest.yml  integration-test.yml
buildSrc/: build.gradle
buildSrc/src/main/groovy/: tsubakuro.java-base.gradle  tsubakuro.java-conventions.gradle  tsubakuro.java-library-conventions.gradle  tsubakuro.javadocs.gradle  tsubakuro.jni-library-conventions.gradle
buildSrc/src/main/resources/: checkstyle.xml  source-header.txt  spotbugsExclude.xml
docs/: api_design.md  auth-http-ja.md  auth-mock-ja.md  blob_relay_design_ja.md  channel_design.md  client_diagnostic.md  message_reception.md  native-library-ja.md  protocol_buffers_convention_ja.md
docs/discussion/: prusik-snippet-ja.md
docs/internal/: blob_relay_impl_ja.md  transaction_close.md  transactoin_auto_dispose.md
modules/auth-http/: README.md  build.gradle
modules/auth-http/config/jetty-base/: .gitignore  README.md
modules/auth-http/config/jetty-base/etc/: harinoki-users.props  jaas-login-service.xml  login.conf
modules/auth-http/config/jetty-base/start.d/: jaas.ini
modules/auth-mock/: README.md  build.gradle
modules/bootstrap/: README.md  build.gradle
modules/bootstrap/src/main/java/com/tsurugidb/tsubakuro/bootstrap/: Main.java  package-info.java
modules/common/: build.gradle
modules/common/src/main/java/com/nautilus_technologies/tsubakuro/exception/: BrokenResponseException.java  ConnectionException.java  CoreServiceCode.java  CoreServiceException.java  DiagnosticCode.java  ResponseTimeoutException.java  ServerException.java  SqlServiceCode.java  SqlServiceException.java  (+1 more)
modules/common/src/main/protos/: common.proto  connect.proto  request.proto  response.proto  schema.proto  status.proto
modules/connection/: build.gradle
modules/connectivity/: build.gradle
modules/connectivity/src/main/java/com/nautilus_technologies/tsubakuro/: FieldType.java  Link.java  LowLevelPreparedStatement.java  LowLevelRequest.java  LowLevelResultSet.java  Request.java
modules/connector/: build.gradle
modules/console/: README.md  build.gradle
modules/console/src/main/jflex/: SqlScanner.jflex
modules/dbtest/: build.gradle
modules/debug/: build.gradle
modules/examples/: build.gradle
modules/examples/config/checkstyle/: checkstyle.xml
modules/examples/config/spotbugs/: spotbugsExclude.xml
modules/explain/: README.md  build.gradle
modules/grpc/: build.gradle
modules/ipc/: build.gradle
modules/ipc/src/main/native/: CMakeLists.txt
modules/ipc/src/main/native/include/: com_tsurugidb_tsubakuro_channel_ipc_IpcLink.h  com_tsurugidb_tsubakuro_channel_ipc_NativeLibrary.h  com_tsurugidb_tsubakuro_channel_ipc_connection_IpcConnectorImpl.h  com_tsurugidb_tsubakuro_channel_ipc_sql_ResultSetWireImpl.h  udf_wires.h  wire.h
modules/ipc/src/main/native/src/: CMakeLists.txt  NativeLibraryJNI.cpp  connectionJNI.cpp  wireJNI.cpp
modules/ipc/src/test/native/: .gitignore  CMakeLists.txt
modules/ipc/src/test/native/include/: server_wires.h
modules/ipc/src/test/native/src/: CMakeLists.txt  server_connectionJNI.cpp  server_wireJNI.cpp
modules/kvs/: YCSB.patch  build.gradle
modules/kvs/src/main/proto/tateyama/proto/kvs/: request.proto  response.proto
modules/proto/: build.gradle
modules/proto/src/main/protos/: common.proto  request.proto  response.proto  schema.proto  status.proto
modules/proto/src/main/protos/data_relay_grpc/proto/blob_relay/: blob_relay_local.proto
modules/proto/src/main/protos/jogasaki/proto/sql/: common.proto  error.proto  request.proto  response.proto  status.proto
modules/proto/src/main/protos/tateyama/proto/: diagnostics.proto
modules/proto/src/main/protos/tateyama/proto/auth/: common.proto  request.proto  response.proto
modules/proto/src/main/protos/tateyama/proto/blob_relay_privilege/: request.proto  response.proto
modules/proto/src/main/protos/tateyama/proto/core/: request.proto  response.proto
modules/proto/src/main/protos/tateyama/proto/datastore/: common.proto  request.proto  response.proto
modules/proto/src/main/protos/tateyama/proto/endpoint/: request.proto  response.proto
modules/proto/src/main/protos/tateyama/proto/framework/: common.proto  request.proto  response.proto
modules/proto/src/main/protos/tateyama/proto/sql/: common.proto  request.proto  response.proto  status.proto
modules/protocolbuffers/: build.gradle
modules/protocolbuffers/main/protos/: common.proto  link.proto  request.proto  response.proto  schema.proto
modules/relay/: build.gradle
modules/relay/src/main/proto/data_relay_grpc/proto/blob_relay/: blob_reference.proto  blob_relay_streaming.proto
modules/session/: build.gradle
modules/sql/: build.gradle
modules/sql/src/main/java/com/nautilus_technologies/tsubakuro/: ExecutablePreparedStatementRequest.java  HelloJNI.java  ParameterSet.java  PrepareRequest.java  PreparedStatement.java  ResultSet.java  Session.java  Transaction.java
modules/sql/src/main/native/: CMakeLists.txt
modules/sql/src/main/native/include/: CMakeLists.txt  wire.h
modules/sql/src/main/native/src/: CMakeLists.txt  LinkImpl.cpp  WireImpl.cpp  wireJNI.cpp
modules/sql/src/main/protos/: request.proto  response.proto  schema.proto
modules/sql/src/test/native/: .gitignore  CMakeLists.txt
modules/sql/src/test/native/src/: CMakeLists.txt  server_wireJNI.cpp
modules/stream/: build.gradle
modules/system/: build.gradle
modules/template-with-native/: build.gradle
modules/template-with-native/src/main/native/: CMakeLists.txt
modules/template-with-native/src/main/native/include/: HelloJNIImpl.h  com_nautilus_technologies_tsubakuro_HelloJNI.h
modules/template-with-native/src/main/native/src/: CMakeLists.txt  HelloJNIImpl.cpp
modules/template-with-native/src/test/java/com/nautilus_technologies/tsubakuro/: TestHelloJNI.java
src/main/java/com/nautilus/technologies/tsubakuro/: PreparedStatement.java  ResultSet.java
(+1168 files in other folders)
